Bug 487605 - nsStopwatch.cpp: Fix GetProcessTimes() usage; (Av1d-CC) nsStopwatch.cpp r=(asuth, dmose) sr=dmose.